# Advacne_RAG_Techniques

./: .gitignore
1_Agentic_Rag/: utils.py
1_Agentic_Rag/basics/: Agentic_RAG.ipynb  pyproject.toml
2_ Multidoc_Agentic_RAG/Nootebook/: 1_Router_Engine.ipynb  3_Agentic_Reasoning_Loop.ipynb  4_Multi_doc_RAG_Using_Agent.ipynb  Tool_calling.ipynb  utils.py
2_ Multidoc_Agentic_RAG/Notebook/: 2_Tool_calling.ipynb  3_Agentic_Reasoning_Loop.ipynb
