[tool.poetry]
name = "agentic-rag"
version = "0.0.1"
description = "Agentic RAG using llamaindex"
authors = ["Sarthak Kaushik"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
llama-index = "^0.10.38"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
